# similaritybench

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  TODOS  appendix_tables.ipynb  bert_finetune.py  compare_representations.py  extract_and_compare_representations_layerwise.py  paths.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  run_iclr.sh  setup.py  setup_container.sh  tables_and_plots.ipynb
augmented_datasets/: utils.py
config/: compare.yaml  extract_compare_layerwise.yaml
configs/: correlation_nlp_augmentation_mnli.yaml  correlation_nlp_augmentation_sst2.yaml  correlation_nlp_memorization_mnli.yaml  correlation_nlp_shortcuts_sst2.yaml  demo_augmentation_test_cora.yaml  example_config.yaml  graphs_randomlabel_cora.yaml  hierarchical_vision_augment_R34.yaml  mass_modify.py  monotonicity_nlp_standard_mnli_cls_tok.yaml  nlp_augmentation_mnli.yaml  nlp_memorization_mnli.yaml  nlp_memorization_sst2.yaml  nlp_shortcuts_sst2.yaml  shortcut_test_group_separation_ogbn-arxiv.yaml  shortcut_test_output_correlation_ogbn-arxiv.yaml
graph/: config.py  run_tests.py
graphs/: config.py  get_reps.py  gnn.py  graph_trainer.py  pgnn.py  run_tests.py  test_gcns.py  tools.py
llmcomp/: representations.py  utils.py
nlp/: augment.ipynb  augment_textattack.ipynb  augment_validation.ipynb  augmented_evals.csv  bert_finetune.py  clean_evals.csv  clean_hydra_dirs.ipynb  eval.py  extract_and_compare.py  llm_tests.ipynb  memorization.ipynb  memorization_evals.csv  memorization_validation.ipynb  memval.py  shortcut.ipynb  shortcut_evals.csv  shortcutval.py  (+2 more)
(+1300 files in other folders)
